{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 363,
  "lineage": "6f5c7633-6c0e-69d5-b4b9-d70a1892a627",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecs_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496778154277:internet-gateway/igw-0393f4c4012a2e8fd",
            "id": "igw-0393f4c4012a2e8fd",
            "owner_id": "496778154277",
            "tags": {
              "Environment": "Dev",
              "Name": "ecs-igw"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "ecs-igw"
            },
            "vpc_id": "vpc-0b1f1f1b5fec04ae4"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:496778154277:loadbalancer/app/ecs-load-balancer/968712fe97b621c0",
            "arn_suffix": "app/ecs-load-balancer/968712fe97b621c0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-load-balancer-1954391634.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:496778154277:loadbalancer/app/ecs-load-balancer/968712fe97b621c0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-005c202b45b497861"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0317d26bdda2b7f59"
              },
              {
                "subnet_id": "subnet-09b4a651cd9f5baa7"
              }
            ],
            "subnets": [
              "subnet-0317d26bdda2b7f59",
              "subnet-09b4a651cd9f5baa7"
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "ecs-load-balancer"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "ecs-load-balancer"
            },
            "vpc_id": "vpc-0b1f1f1b5fec04ae4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ecs_security_group",
            "aws_security_group.lb_security_group",
            "aws_subnet.ecs_subnet_1",
            "aws_subnet.ecs_subnet_2",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecs_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:496778154277:listener/app/ecs-load-balancer/968712fe97b621c0/407a28cd5b370f75",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:496778154277:targetgroup/ecs-target-group/d54bc327c8bf14ea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:496778154277:listener/app/ecs-load-balancer/968712fe97b621c0/407a28cd5b370f75",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:496778154277:loadbalancer/app/ecs-load-balancer/968712fe97b621c0",
            "mutual_authentication": [],
            "port": 8081,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_load_balancer",
            "aws_lb_target_group.ecs_target_group",
            "aws_security_group.ecs_security_group",
            "aws_security_group.lb_security_group",
            "aws_subnet.ecs_subnet_1",
            "aws_subnet.ecs_subnet_2",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:496778154277:targetgroup/ecs-target-group/d54bc327c8bf14ea",
            "arn_suffix": "targetgroup/ecs-target-group/d54bc327c8bf14ea",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:496778154277:targetgroup/ecs-target-group/d54bc327c8bf14ea",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:496778154277:loadbalancer/app/ecs-load-balancer/968712fe97b621c0"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-target-group",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "ecs-target-group"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "ecs-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b1f1f1b5fec04ae4"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecs_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496778154277:route-table/rtb-07a6f9b57507fa0b6",
            "id": "rtb-07a6f9b57507fa0b6",
            "owner_id": "496778154277",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0393f4c4012a2e8fd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "ecs-route-table"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "ecs-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1f1f1b5fec04ae4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ecs_igw",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecs_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7a29309b5349ac5",
            "route_table_id": "rtb-07a6f9b57507fa0b6",
            "subnet_id": "subnet-0317d26bdda2b7f59"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_igw",
            "aws_route_table.ecs_route_table",
            "aws_subnet.ecs_subnet_1",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecs_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ad96569128e2bfc",
            "route_table_id": "rtb-07a6f9b57507fa0b6",
            "subnet_id": "subnet-09b4a651cd9f5baa7"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_igw",
            "aws_route_table.ecs_route_table",
            "aws_subnet.ecs_subnet_2",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496778154277:security-group/sg-005c202b45b497861",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005c202b45b497861",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09e82b5feda16cb3a"
                ],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "ecs-security-group",
            "name_prefix": "",
            "owner_id": "496778154277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "ecs-security-group"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "ecs-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1f1f1b5fec04ae4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_security_group",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496778154277:security-group/sg-09e82b5feda16cb3a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e82b5feda16cb3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "lb-security-group",
            "name_prefix": "",
            "owner_id": "496778154277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "lb-security-group"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "lb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1f1f1b5fec04ae4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496778154277:subnet/subnet-0317d26bdda2b7f59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0317d26bdda2b7f59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "496778154277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "ecs-subnet-1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "ecs-subnet-1"
            },
            "vpc_id": "vpc-0b1f1f1b5fec04ae4"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496778154277:subnet/subnet-09b4a651cd9f5baa7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b4a651cd9f5baa7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "496778154277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "ecs-subnet-2"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "ecs-subnet-2"
            },
            "vpc_id": "vpc-0b1f1f1b5fec04ae4"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496778154277:vpc/vpc-0b1f1f1b5fec04ae4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08e20851481335aa3",
            "default_route_table_id": "rtb-0b080bbfc45c4ee28",
            "default_security_group_id": "sg-0774907777983b901",
            "dhcp_options_id": "dopt-0319f9d267803cac4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1f1f1b5fec04ae4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b080bbfc45c4ee28",
            "owner_id": "496778154277",
            "tags": {
              "Environment": "Dev",
              "Name": "ecs-vpc"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "ecs-vpc"
            }
          }
        }
      ]
    }
  ]
}